# rusty_engine

./: .gitignore  00-welcome.html  02-quick-start.html  05-config.html  10-assets.html  100-input.html  105-keyboard-state.html  110-keyboard-events.html  115-mouse-state.html  120-mouse-events.html  15-init.html  150-text.html  155-text-creation.html  160-text-attributes.html  165-text-placement.html  165-text-transform.html  20-game-state.html  200-audio.html  205-music.html  210-sfx.html  25-game-logic-function.html  250-timer.html  400-engine-state.html  400-engine.html  404.html  450-game.html  50-sprite.html  55-sprite-creation.html  60-sprite-placement.html  60-sprite-transform.html  65-sprite-collider.html  CHANGELOG.md  COPYING  Cargo.toml  README.md  RELEASE.md  bump_version  index.html  print.html  publish  (+7 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  rust.yml  tutorial.yml
assets/audio/: README.md
assets/audio/music/: README.md  Whimsical Popsicle.oga
assets/audio/sfx/: README.md
assets/sprite/ball/: README.md
assets/sprite/racing/: README.md  barrel_red.collider  barrier_red.collider  car_yellow.collider  cone_straight.collider
assets/sprite/rolling/: README.md  ball_red_alt.collider  block_corner.collider  block_narrow.collider  block_small.collider  block_square.collider  hole_end.collider  hole_start.collider
assets/sprite/space/: block_bolt_red.collider  enemy_black.collider  enemy_blue.collider  enemy_green.collider  enemy_orange.collider  enemy_red.collider  explosion.collider  laser_blue.collider  laser_red.collider  life_red.collider  ship_blue.collider  ship_red.collider  ufo.collider
doc/: release.md
examples/: blah.rs  collider.rs  collider_creator.rs  collision.rs  game_state.rs  gamestate.rs  keyboard.rs  keyboard_events.rs  keyboard_state.rs  layer.rs  level_creator.rs  mouse.rs  mouse_events.rs  mouse_state.rs  music.rs  music_sampler.rs  placement.rs  sfx.rs  sfx_sampler.rs  sound.rs  sprite.rs  text.rs  transform.rs  window.rs
examples/scenarios/: car_invaders.rs  car_shoot.rs  extreme_drivers_ed.rs  invaders.rs  road_race.rs
license/: APACHE  MIT
rusty_audio/: CHANGELOG.md  Cargo.toml  README.md
rusty_audio/src/: lib.rs
rusty_core/: Cargo.toml  README.md
rusty_core/src/: lib.rs  transform.rs
rusty_gfx/: Cargo.toml  README.md
rusty_gfx/src/: color.rs  event.rs  lib.rs  util.rs
rusty_gfx/src/shader/: circle_solid_frag.glsl  circle_solid_vertex.glsl
rusty_time/: Cargo.toml  README.md
rusty_time/src/: lib.rs  timer.rs
scenarios/: README.md  cannon_practice.md  car_invaders.md  car_shoot.md  drivers_ed.md  extreme_drivers_ed.md  labrinth.md  road_race.md  space_invaders.md
script/: publish_tutorial  test_examples
src/: actor.rs  audio.rs  consts.rs  game.rs  keyboard.rs  lib.rs  macros.rs  mouse.rs  physics.rs  preset.rs  repositories.rs  sprite.rs  text.rs  text_actor.rs  traits.rs
src/audio/: audio.rs  audio_manager.rs  audio_output.rs  audio_source.rs  mod.rs
tutorial/: book.toml
tutorial/src/: 00-welcome.md  02-quick-start.md  05-config.md  10-assets.md  100-input.md  105-keyboard-state.md  110-keyboard-events.md  115-mouse-state.md  120-mouse-events.md  15-init.md  150-text.md  155-text-creation.md  160-text-attributes.md  165-text-placement.md  165-text-transform.md  20-game-state.md  200-audio.md  205-music.md  210-sfx.md  25-game-logic-function.md  250-timer.md  400-engine-state.md  400-engine.md  450-game.md  50-sprite.md  55-sprite-creation.md  60-sprite-placement.md  60-sprite-transform.md  65-sprite-collider.md  SUMMARY.md
userguide/: book.toml
userguide/src/: SUMMARY.md  beginning.md  welcome.md
