[package]
name = "rusty_engine"
version = "0.1.0"
authors = ["Nathan Stocks <nathan@agileperception.com>"]
description = "A fun way to learn Rust using a simple 2D game engine."
edition = "2018"
homepage = "https://github.com/CleanCut/rusty_engine"
repository = "https://github.com/CleanCut/rusty_engine"
readme = "README.md"
keywords = ["game", "engine", "graphics", "audio", "rusty"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "rusty_audio",
    "rusty_core",
    "rusty_gfx"
]

[dependencies]
rusty_audio = { path = "rusty_audio", version = "1.1.3" }
rusty_core = { path = "rusty_core", version = "0.1.0" }
rusty_gfx = { path = "rusty_gfx", version = "0.4.1" }


