[package]
name = "rusty_engine"
version = "1.1.3"
authors = [ "Nathan Stocks <nathan@agileperception.com>" ]
description = "Learn Rust with a simple, cross-platform, 2D game engine."
edition = "2018"
homepage = "https://github.com/CleanCut/rusty_engine"
repository = "https://github.com/CleanCut/rusty_engine"
readme = "README.md"
keywords = [ "game", "engine", "graphics", "audio", "rusty" ]
categories = [ "game-engines" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "47004dfcb415a049e4c6e68fdf56c26de72f51a1" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy = { version = "0.5", default-features = false, features = [
    #"bevy_audio"
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "mp3",
    "x11",
] }
bevy_kira_audio = { version = "0.5.0", features = [
    "flac",
    "mp3",
    "ogg",
    "wav",
] }
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"

[[example]]
name = "car_shoot"
path = "examples/scenarios/car_shoot.rs"

[[example]]
name = "road_race"
path = "examples/scenarios/road_race.rs"
