[package]
name = "rusty_engine"
version = "6.0.0"
description = "Learn Rust with a simple, cross-platform, 2D game engine."
edition = "2021"
homepage = "https://github.com/CleanCut/rusty_engine"
repository = "https://github.com/CleanCut/rusty_engine"
readme = "README.md"
keywords = [ "game", "engine", "graphics", "audio", "rusty" ]
categories = [ "game-engines" ]
license = "MIT OR Apache-2.0"
exclude = [
    "/assets",
    "/.github",
    "/scenarios",
    "/tutorial",
    "/script",
    "release.toml",
    "RELEASE.md",
    ".gitignore",
]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_audio",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_winit",
    "png",
    "hdr",
    "mp3",
    "x11",
    "vorbis",
] }
bevy_prototype_lyon = "0.10.0"
ron = "0.8"
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "car_shoot"
path = "examples/scenarios/car_shoot.rs"

[[example]]
name = "road_race"
path = "examples/scenarios/road_race.rs"

[[example]]
name = "extreme_drivers_ed"
path = "examples/scenarios/extreme_drivers_ed.rs"
