[package]
name = "rusty_audio"
version = "1.1.4"
authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
edition = "2018"
description = "Convenient sound library for small projects and educational purposes."
homepage = "https://github.com/cleancut/rusty_engine/tree/master/rusty_audio"
repository = "https://github.com/cleancut/rusty_engine/tree/master/rusty_audio"
readme = "README.md"
keywords = ["audio", "sound", "effects", "sfx", "rusty"]
categories = ["game-development", "multimedia::audio"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.10.0"
