[package]
name = "rusty_gfx"
version = "0.4.1"
authors = ["Nathan Stocks <nathan@agileperception.com>"]
edition = "2018"
description = "Create windows, display graphics, handle input events (keyboard, mouse, etc.). Part of the rusty_engine game engine."
homepage = "https://github.com/cleancut/rusty_engine/tree/master/rusty_gfx"
repository = "https://github.com/cleancut/rusty_engine/tree/master/rusty_gfx"
readme = "README.md"
keywords = ["rusty", "learn", "educational", "graphics", "opengl"]
categories = ["game-development", "graphics", "rendering"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26.0"
image = "0.21.0"
nalgebra-glm = { version = "0.5.0", features = ["serde-serialize"] }
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
rusty_core = { path = "../rusty_core", version = "0.1.0" }