[package]
name = "rusty_time"
version = "0.11.0"
authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
edition = "2018"
description = "Time utilities for simple games, part of `rusty_engine`"
homepage = "https://github.com/cleancut/rusty_engine/tree/master/rusty_time"
repository = "https://github.com/cleancut/rusty_engine/tree/master/rusty_time"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


